--- a/resources/css/style.css
+++ b/resources/css/style.css
@@ -8,3 +8,32 @@ body{
   height: auto;
   color: white;
 }
+.cta {
+  color: white;
+  font-size: 18px;
+}
+h1{
+  font-size: 70px;
+  font-weight: bold;
+}
+h2{
+  font-size: 32px;
+  font-weight: bold;
+}
+h3{
+  font-size: 23px;
+  font-weight: bold;
+}
+h4{
+  font-size: 14px;
+  font-weight: normal;
+}
+.footer{
+  background-color: dimgray;
+  font-size: 11px;
+  color: white;
+  text-align: left;
+}
+.foot{
+  color: white;
+}
